@@ -1,3 +1,8 @@
+2008-05-15  Bean  <bean123ch@gmail.com>
+
+	* kern/i386/pc/startup.S (grub_console_getkey): Workaround for the
+	keyboard hang problem in apple's intel mac.
+
 2008-05-09  Robert Millan  <rmh@aybabtu.com>
 
 	* util/biosdisk.c (linux_find_partition, get_os_disk): Handle Virtio
